<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NovaBiljkaActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/nazivET"
                android:layout_height="wrap_content"
                android:layout_width="200dp"
                android:layout_marginTop="10dp"
                android:layout_marginStart="5dp"
                android:inputType="text"
                android:hint="@string/naziv_biljke"
                android:backgroundTint="@android:color/holo_green_dark"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                android:autofillHints="" />

            <EditText
                android:id="@+id/porodicaET"
                android:layout_height="wrap_content"
                android:layout_width="200dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="5dp"
                android:inputType="text"
                android:hint="@string/porodica"
                android:backgroundTint="@android:color/holo_green_dark"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/nazivET"
                android:autofillHints="" />

            <EditText
                android:id="@+id/medicinskoUpozorenjeET"
                android:layout_height="wrap_content"
                android:layout_width="200dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="5dp"
                android:inputType="text"
                android:hint="@string/medicinsko_upozorenje"
                android:backgroundTint="@android:color/holo_green_dark"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/porodicaET"
                android:autofillHints="" />

            <EditText
                android:id="@+id/jeloET"
                android:layout_height="wrap_content"
                android:layout_width="200dp"
                android:layout_marginTop="8dp"
                android:layout_marginStart="5dp"
                android:inputType="text"
                android:hint="@string/jelo"
                android:backgroundTint="@android:color/holo_green_dark"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/medicinskoUpozorenjeET"
                android:autofillHints="" />

            <Button
                android:id="@+id/dodajJeloBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dodaj_jelo"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:backgroundTint="@android:color/holo_green_dark"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/jeloET"/>

            <ImageView
                android:id="@+id/slikaIV"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="5dp"
                android:src="@drawable/default_plant"
                android:backgroundTint="@android:color/holo_green_dark"
                app:layout_constraintStart_toEndOf="@id/nazivET"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                android:contentDescription="@string/slika_biljke_koju_dodajete" />

            <Button
                android:id="@+id/uslikajBiljkuBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/uslikaj_biljku"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:backgroundTint="@android:color/holo_green_dark"
                app:layout_constraintStart_toEndOf="@id/jeloET"
                app:layout_constraintTop_toBottomOf="@id/slikaIV"
                app:layout_constraintEnd_toEndOf="parent"/>

            <TextView
                android:id="@+id/jelaTV"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:clickable="true"
                android:focusableInTouchMode="true"
                android:layout_marginTop="16dp"
                android:backgroundTint="@android:color/holo_green_dark"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dodajJeloBtn"
                android:text="@string/jela" />

            <ListView
                android:id="@+id/jelaLV"
                android:layout_height="wrap_content"
                android:layout_width="300dp"
                android:layout_marginTop="8dp"
                android:divider="@android:color/holo_green_dark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/jelaTV" />

            <TextView
                android:id="@+id/medicinskaKoristTV"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:backgroundTint="@android:color/holo_green_dark"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/jelaLV"
                android:text="@string/medicinska_korist"
                />

            <ListView
                android:id="@+id/medicinskaKoristLV"
                android:layout_height="wrap_content"
                android:layout_width="300dp"
                android:layout_marginTop="8dp"
                android:divider="@android:color/holo_green_dark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/medicinskaKoristTV"
                />

            <TextView
                android:id="@+id/klimatskiTipTV"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:clickable="true"
                android:focusableInTouchMode="true"
                android:layout_marginTop="16dp"
                android:backgroundTint="@android:color/holo_green_dark"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/medicinskaKoristLV"
                android:text="@string/klimatski_tip" />

            <ListView
                android:id="@+id/klimatskiTipLV"
                android:layout_height="wrap_content"
                android:layout_width="300dp"
                android:layout_marginTop="8dp"
                android:divider="@android:color/holo_green_dark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/klimatskiTipTV" />

            <TextView
                android:id="@+id/zemljisniTipTV"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:clickable="true"
                android:focusableInTouchMode="true"
                android:layout_marginTop="16dp"
                android:backgroundTint="@android:color/holo_green_dark"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/klimatskiTipLV"
                android:text="@string/zemljisni_tip" />

            <ListView
                android:id="@+id/zemljisniTipLV"
                android:layout_height="wrap_content"
                android:layout_width="300dp"
                android:layout_marginTop="8dp"
                android:divider="@android:color/holo_green_dark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/zemljisniTipTV" />

            <TextView
                android:id="@+id/profilOkusaTV"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:focusable="true"
                android:clickable="true"
                android:focusableInTouchMode="true"
                android:layout_marginTop="16dp"
                android:backgroundTint="@android:color/holo_green_dark"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/zemljisniTipLV"
                android:text="@string/profil_okusa" />

            <ListView
                android:id="@+id/profilOkusaLV"
                android:layout_height="wrap_content"
                android:layout_width="300dp"
                android:layout_marginTop="8dp"
                android:divider="@android:color/holo_green_dark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profilOkusaTV" />

            <Button
                android:id="@+id/dodajBiljkuBtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dodaj_biljku"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:backgroundTint="@android:color/holo_green_dark"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@id/profilOkusaLV"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>